--- a/index.org
+++ b/index.org
@@ -3,8 +3,8 @@
 #+options: d:(not "LOGBOOK") date:t e:t email:nil f:t inline:t num:t
 #+options: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
 #+options: timestamp:t title:nil toc:t todo:t |:t
-#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../css/terminal.css" />
-#+HTML_HEAD: <script src="../scripts/main.js"></script>
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/terminal.css" />
+#+HTML_HEAD: <script src="scripts/main.js"></script>
 #+language: en
 #+select_tags: export
 #+exclude_tags: noexport
