--- a/index.org
+++ b/index.org
@@ -5,6 +5,7 @@
 #+options: timestamp:t title:nil toc:t todo:t |:t
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/terminal.css" />
 #+HTML_HEAD: <script src="scripts/main.js"></script>
+#+HTML_HEAD:  <link rel="shortcut icon" type="image/x-icon" href="res/favicon-32x32.ico">"
 #+language: en
 #+select_tags: export
 #+exclude_tags: noexport
