--- a/posts/mailserver-addendum.org
+++ b/posts/mailserver-addendum.org
@@ -1,9 +1,42 @@
+#+options: ':nil *:t -:t ::t <:t H:3 \n:nil ^:{} arch:headline
+#+options: author:t broken-links:nil c:nil creator:nil
+#+options: d:(not "LOGBOOK") date:t e:t email:nil f:t inline:t num:t
+#+options: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
+#+options: timestamp:t title:nil toc:t todo:t |:t
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../css/terminal.css" />
+#+HTML_HEAD: <script src="../scripts/main.js" integrity="sha384-XS1iS5qpCSdI66js7YVxG6+tuvIeTft0XeleXz9G+LKqDXt2rcWB+0OOYzyKlEau"></script>
+#+HTML_HEAD:  <link rel="shortcut icon" type="image/x-icon" href="res/favicon-32x32.ico">"
+#+language: en
+#+select_tags: export
+#+exclude_tags: noexport
+#+creator: Emacs 27.1 (Org mode 9.3)
+#+options: html-link-use-abs-url:nil
+#+options: html-scripts:nil html-style:nil
+#+options: html5-fancy:nil tex:t
+#+html_doctype: xhtml-strict
+#+html_container: div
+#+description:
+#+keywords:
+#+html_link_home:
+#+html_link_up:
+#+html_mathjax:
+#+html_head:
+#+html_head_extra:
+#+subtitle:
+#+infojs_opt:
+#+creator: <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3)
+#+latex_header:
+#+options: toc:nil
+
+
 #+TITLE: In Addition to Luke Smith's Mail Configuration Video
 #+AUTHOR: Ryan Jeffrey
 #+EMAIL: ryan@ryanmj.xyz
 #+OPTIONS: num:nil
 
-I used [[https://youtu.be/9zP7qooM4pY][Luke Smith's video on setting up and email server]], and although it got me 90% of the way there, I encountered a couple of snags that he was able to avoid for whatever reason. 
+__PROMPT__ cat posts/mailserver-addendum.html
+
+I used [[https://youtu.be/9zP7qooM4pY][Luke Smith's video on setting up an email server]], and although it got me 90% of the way there, I encountered a couple of snags that he was able to avoid for whatever reason. 
 
 
 * Port 25
