--- a/posts/mailserver-addendum.org
+++ b/posts/mailserver-addendum.org
@@ -4,8 +4,8 @@
 #+options: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
 #+options: timestamp:t title:nil toc:t todo:t |:t
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../css/terminal.css" />
-#+HTML_HEAD: <script src="../scripts/main.js" integrity="sha384-XS1iS5qpCSdI66js7YVxG6+tuvIeTft0XeleXz9G+LKqDXt2rcWB+0OOYzyKlEau"></script>
-#+HTML_HEAD:  <link rel="shortcut icon" type="image/x-icon" href="res/favicon-32x32.ico">"
+#+HTML_HEAD: <script src="../scripts/main.js" integrity="sha384-__SHASUM__"></script>
+#+HTML_HEAD: <link rel="shortcut icon" type="image/x-icon" href="/res/favicon.ico">
 #+language: en
 #+select_tags: export
 #+exclude_tags: noexport
@@ -32,11 +32,12 @@
 #+TITLE: In Addition to Luke Smith's Mail Configuration Video
 #+AUTHOR: Ryan Jeffrey
 #+EMAIL: ryan@ryanmj.xyz
+#+DATE: <2020-09-16 Wed>
 #+OPTIONS: num:nil
 
 __PROMPT__ cat posts/mailserver-addendum.html
 
-I used [[https://youtu.be/9zP7qooM4pY][Luke Smith's video on setting up an email server]], and although it got me 90% of the way there, I encountered a couple of snags that he was able to avoid for whatever reason. 
+I used [[https://youtu.be/9zP7qooM4pY][Luke Smith's video on setting up an email server]], and although it got me 90% of the way there, I encountered a couple of snags that he was able to avoid for whatever reason.
 
 
 * Port 25
