--- a/index.org
+++ b/index.org
@@ -4,7 +4,7 @@
 #+options: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
 #+options: timestamp:t title:nil toc:t todo:t |:t
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/terminal.css" />
-#+HTML_HEAD: <script src="scripts/main.js" integrity='sha384-__SHASUM__'></script>
+#+HTML_HEAD: <script defer src="scripts/main.js"></script>
 #+HTML_HEAD: <link rel="shortcut icon" type="image/x-icon" href="res/favicon-32x32.ico">
 #+language: en
 #+select_tags: export
